@@ -17,7 +17,6 @@
     <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/objects.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="Mono.TextEditor" subtype="Directory" buildaction="Compile" />
-    <File name="Mono.TextEditor/TextEditor.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor/IBuffer.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor/Segment.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor/LineSegment.cs" subtype="Code" buildaction="Compile" />
@@ -61,6 +60,7 @@
     <File name="Mono.TextEditor/TextMarker.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor/DocumentUpdateRequest.cs" subtype="Code" buildaction="Compile" />
     <File name="ChangeLog" subtype="Code" buildaction="Nothing" />
+    <File name="Mono.TextEditor/TextEditor.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="glib-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
